<resources>
    <string name="app_name">SCORE IT</string>
    <string name="cup_name">Cup Name</string>
    <string name="main_menu_text">Main Menu</string>
    <string name="view_created_cups">View Created Cups</string>
    <string name="create_new_cup">Create New Cup</string>
    <string name="go_to_user_screen">Go to User Screen</string>
    <string name="app_icon">App Icon</string>
    <string name="add_logo">Add a Logo</string>
    <string name="add_logo_button">+</string>
    <string name="cup_date">Cup Date</string>
    <string name="username">Username</string>
    <string name="email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="initial_score">0</string>
    <string name="always_a_winner">Always a Winner</string>
    <string name="two_point_difference">Two Point Difference</string>
    <string name="home_and_away">Double match</string>
    <string name="want_time">Set Time</string>
    <string name="want_score">Set Score</string>
    <string name="time_amount">Time</string>
    <string name="cup_points_text">Points</string>
    <string name="rest_times_text">Rest Times</string>
    <string name="rounds_text">Rounds</string>
    <string name="two_round_difference_text">Two Round Difference</string>
    <string name="rest_quantity_edit_text">Number of Rests</string>
    <string name="rest_time_edit_text">Rest Time</string>
    <string name="rounds_to_win_edit_text">Rounds to Win:</string>
    <string name="jan_01_2020">JAN 01 2020</string>
    <string name="save">Save</string>
    <string name="rounds_to_win_text">Rounds to Win:</string>
    <string name="back_button"><![CDATA[< Back]]></string>
    <string name="minutes_text">Minutes:</string>
    <string name="select_minutes">Select Minutes</string>
    <string name="select_rest_quantity">Select Number of Rests</string>
    <string name="rounds_to_win">Rounds to Win</string>
    <string name="cups_created_by">Cups Created By:</string>

    <string name="no_account">No account? Create one</string>
    <string name="create_account">Create New Account</string>

    <string name="matches">Matches:</string>
    <string name="team_number">Number of Teams:</string>
    <string name="configure_teams">Configure Teams</string>
    <string name="save_changes">Save Changes</string>
    <string name="position_table">Position Table</string>
    <string name="time">Time:</string>
    <string name="points">Points:</string>
    <string name="rest">Rest</string>
    <string name="finish">Finish</string>
    <string name="suspend">Suspend</string>
    <string name="timer">00:00:00</string>
    <string name="double_match">Double Match:</string>
    <string name="always_winner">Always Winner:</string>
    <string name="date">Start date:</string>
    <string name="game_mode">Mode:</string>
    <string name="team">Team</string>
    <string name="pts">Pts</string>
    <string name="pts_in_game">pts</string>
    <string name="matches_played">MP</string>
    <string name="matches_won">W</string>
    <string name="matches_lost">L</string>
    <string name="user_logo">User Logo</string>
    <string name="choose_account">Who are you? Choose your account</string>
    <string name="create_new_team">Create New Team</string>
    <string name="team_name">Team Name</string>
    <string name="rest_time">Rest Time:</string>
    <string name="two_points_difference">Two Point Difference:</string>
    <string name="initial_rounds">(0)</string>
    <string name="edit_button">Edit</string>
    <string name="user_info">USER INFO</string>
    <string name="change_user">Change user</string>
    <string name="rounds">Rounds:</string>
    <string name="delete_button">Delete</string>
    <string name="cup_logo">cup logo</string>
    <string name="playable_match">Playable Match</string>
    <string name="winner">Winner:</string>

    <string-array name="game_mode_options">
        <item>Round Robin</item>
        <item>Brackets</item>
        <item>Both</item>
    </string-array>
</resources>
