<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    style="@style/Background"
    tools:context=".controller.activities.ActivityNewTeamSettings">

    <include layout="@layout/header_main" />

    <TextView
        android:id="@+id/current_screen_info"
        style="@style/HeaderTitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/DarkRed"
        android:gravity="center"
        android:text="@string/create_new_team"
        app:layout_constraintTop_toBottomOf="@+id/header_main" />

    <EditText
        android:id="@+id/new_team_name"
        style="@style/EditTextHintStyle"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:autofillHints="name"
        android:backgroundTint="@color/DarkestRed"
        android:hint="@string/team_name"
        android:inputType="text"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/current_screen_info" />

    <Button
        android:id="@+id/save_button"
        style="@style/NormalText"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_margin="15dp"
        android:backgroundTint="@color/CommonRed"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/two_rounds_checkbox" />

    <Button
        android:id="@+id/back_button"
        style="@style/NormalText"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_margin="15dp"
        android:backgroundTint="@color/CommonRed"
        android:text="@string/back_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/delete_button"
        style="@style/NormalText"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/DarkestBlue"
        android:text="@string/delete_button"
        app:layout_constraintBottom_toTopOf="@id/back_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>