<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    style="@style/Background"
    android:orientation="vertical"
    android:padding="12dp"
    tools:context=".ActivityChangeUserData">

    <TextView
        android:id="@+id/title"
        style="@style/LargeText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="10dp"
        android:text="@string/user_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/user_name"
        style="@style/EditTextHintStyle"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:autofillHints="User 1"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="12dp"
        app:layout_constraintBottom_toTopOf="@id/user_email"
        app:layout_constraintEnd_toEndOf="@id/guideline_margen_derecha"
        app:layout_constraintStart_toStartOf="@id/guideline_margen_izquierda" />

    <EditText
        android:id="@+id/user_email"
        style="@style/EditTextHintStyle"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:autofillHints=""
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline_margen_derecha"
        app:layout_constraintStart_toStartOf="@id/guideline_margen_izquierda"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/user_password"
        style="@style/EditTextHintStyle"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:autofillHints=""
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="@id/guideline_margen_derecha"
        app:layout_constraintStart_toStartOf="@id/guideline_margen_izquierda"
        app:layout_constraintTop_toBottomOf="@id/user_email" />

    <Button
        android:id="@+id/save_button"
        style="@style/NormalText"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/CommonRed"
        android:padding="12dp"
        android:text="@string/save_changes"
        app:layout_constraintEnd_toEndOf="@id/guideline_margen_derecha"
        app:layout_constraintStart_toStartOf="@id/guideline_margen_izquierda"
        app:layout_constraintTop_toBottomOf="@id/user_password" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_margen_izquierda"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_margen_derecha"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <Button
        android:id="@+id/change_user_button"
        style="@style/NormalText"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/CommonRed"
        android:text="@string/change_user"
        app:layout_constraintBottom_toTopOf="@id/delete_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/delete_button"
        style="@style/NormalText"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/DarkestBlue"
        android:text="@string/delete_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>