<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    style="@style/Background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.activities.ActivityAddTeam">

    <include layout="@layout/header_main" />

    <TextView
        android:id="@+id/cup_name"
        style="@style/HeaderTitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/DarkRed"
        android:text="@string/configure_teams"
        app:layout_constraintTop_toBottomOf="@+id/header_main" />

    <TextView
        android:id="@+id/team_counter"
        style="@style/NormalText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:maxLines="2"
        android:text="@string/team_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cup_name" />

    <Button
        android:id="@+id/add_team_button"
        style="@style/NormalText"
        android:layout_width="54dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/CommonRed"
        android:padding="12dp"
        android:text="@string/add_logo_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/team_counter" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerTeams"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@id/save_button"
        app:layout_constraintEnd_toEndOf="@id/guideline_margin_right"
        app:layout_constraintStart_toStartOf="@id/guideline_margin_left"
        app:layout_constraintTop_toBottomOf="@id/add_team_button" />

    <Button
        android:id="@+id/save_button"
        style="@style/NormalText"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_margin="15dp"
        android:backgroundTint="@color/CommonRed"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline_margin_right" />

    <Button
        android:id="@+id/back_button"
        style="@style/NormalText"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_margin="15dp"
        android:backgroundTint="@color/CommonRed"
        android:text="@string/back_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_margin_left"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_margin_right"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />


</androidx.constraintlayout.widget.ConstraintLayout>