<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Background"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ActivitySignUp">

    <include layout="@layout/header_sign_up" />

    <EditText
        android:id="@+id/username_sign_up"
        style="@style/EditTextHintStyle"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:autofillHints="User 1"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="12dp"
        app:layout_constraintBottom_toTopOf="@id/email_sign_up"
        app:layout_constraintEnd_toEndOf="@id/guideline_margen_derecha"
        app:layout_constraintStart_toStartOf="@id/guideline_margen_izquierda" />

    <EditText
        android:id="@+id/email_sign_up"
        style="@style/EditTextHintStyle"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:autofillHints=""
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline_margen_derecha"
        app:layout_constraintStart_toStartOf="@id/guideline_margen_izquierda"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password_sign_up"
        style="@style/EditTextHintStyle"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:autofillHints=""
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="@id/guideline_margen_derecha"
        app:layout_constraintStart_toStartOf="@id/guideline_margen_izquierda"
        app:layout_constraintTop_toBottomOf="@id/email_sign_up" />

    <EditText
        android:id="@+id/password_safety_sign_up"
        style="@style/EditTextHintStyle"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:autofillHints=""
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="@id/guideline_margen_derecha"
        app:layout_constraintStart_toStartOf="@id/guideline_margen_izquierda"
        app:layout_constraintTop_toBottomOf="@id/password_sign_up" />

    <Button
        android:id="@+id/create_account_button"
        style="@style/NormalText"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/CommonRed"
        android:padding="12dp"
        android:text="@string/create_account"
        app:layout_constraintEnd_toEndOf="@id/guideline_margen_derecha"
        app:layout_constraintStart_toStartOf="@id/guideline_margen_izquierda"
        app:layout_constraintTop_toBottomOf="@id/password_safety_sign_up" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_margen_izquierda"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_margen_derecha"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

</androidx.constraintlayout.widget.ConstraintLayout>